--- a/man/setaudit.2
+++ b/man/setaudit.2
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/setaudit.2#6 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/setaudit.2#7 $
 .\"
 .Dd April 19, 2005
 .Dt SETAUDIT 2
@@ -31,31 +31,32 @@
 .Sh NAME
 .Nm setaudit ,
 .Nm setaudit_addr
-.Nd "Set audit session state"
+.Nd "set audit session state"
 .Sh SYNOPSIS
 .In bsm/audit.h
 .Ft int
 .Fn setaudit "auditinfo_t *auditinfo"
 .Ft int
-.Fn setaudit_addr "auditinfo_addr_t *auditinfo" "u_int length"
+.Fn setaudit_addr "auditinfo_addr_t *auditinfo_addr" "u_int length"
 .Sh DESCRIPTION
-.Nm
+The
+.Fn setaudit
+system call
 sets the active audit session state for the current process via the
 .Vt auditinfo_t
 pointed to by
-.Va auditinfo .
+.Fa auditinfo .
+The
 .Fn setaudit_addr
+system call
 sets extended state via
-.Va auditinfo_addr
+.Fa auditinfo_addr
 and
-.Va length .
+.Fa length .
 .Pp
-This system call requires appropriate privilege to complete.
+These system calls require an appropriate privilege to complete.
 .Sh RETURN VALUES
-.Nm
-returns 0 on success, or returns -1 on failure, providing additional error
-information via
-.Va errno .
+.Rv -std setaudit setaudit_addr
 .Sh SEE ALSO
 .Xr audit 2 ,
 .Xr auditon 2 ,
@@ -69,9 +70,13 @@ division of McAfee Inc., under contract to Apple Computer Inc.\& in 2004.
 It was subsequently adopted by the TrustedBSD Project as the foundation for
 the OpenBSM distribution.
 .Sh AUTHORS
+.An -nosplit
 This software was created by McAfee Research, the security research division
 of McAfee, Inc., under contract to Apple Computer Inc.
-Additional authors include Wayne Salamon, Robert Watson, and SPARTA Inc.
+Additional authors include
+.An Wayne Salamon ,
+.An Robert Watson ,
+and SPARTA Inc.
 .Pp
 The Basic Security Module (BSM) interface to audit records and audit event
 stream format were defined by Sun Microsystems.
