--- a/man/setauid.2
+++ b/man/setauid.2
@@ -23,31 +23,30 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/setauid.2#6 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/setauid.2#7 $
 .\"
 .Dd April 19, 2005
 .Dt SETAUID 2
 .Os
 .Sh NAME
 .Nm setauid
-.Nd "Set audit session ID"
+.Nd "set audit session ID"
 .Sh SYNOPSIS
 .In bsm/audit.h
 .Ft int
 .Fn setauid "au_id_t *auid"
 .Sh DESCRIPTION
-.Nm
+The
+.Fn setauid
+system call
 sets the active audit session ID for the current process from the
 .Vt au_id_t
 pointed to by
-.Va auid .
+.Fa auid .
 .Pp
-This system call requires appropriate privilege to complete.
+This system call requires an appropriate privilege to complete.
 .Sh RETURN VALUES
-.Nm
-returns 0 on success, or returns -1 on failure, providing additional error
-information via
-.Va errno .
+.Rv -std
 .Sh SEE ALSO
 .Xr audit 2 ,
 .Xr auditon 2 ,
@@ -63,9 +62,13 @@ division of McAfee Inc., under contract to Apple Computer Inc.\& in 2004.
 It was subsequently adopted by the TrustedBSD Project as the foundation for
 the OpenBSM distribution.
 .Sh AUTHORS
+.An -nosplit
 This software was created by McAfee Research, the security research division
 of McAfee, Inc., under contract to Apple Computer Inc.
-Additional authors include Wayne Salamon, Robert Watson, and SPARTA Inc.
+Additional authors include
+.An Wayne Salamon ,
+.An Robert Watson ,
+and SPARTA Inc.
 .Pp
 The Basic Security Module (BSM) interface to audit records and audit event
 stream format were defined by Sun Microsystems.
