--- a/NEWS
+++ b/NEWS
@@ -12,7 +12,7 @@ OpenBSM 1.1 alpha 2
   versions of the system includes in a kernel source tree, and will use the
   OpenBSM build infrastructure with an unmodified OpenBSM distribution,
   allowing the customized system includes to be used with the OpenBSM build.
-  Submitted by stacey Son.
+  Submitted by Stacey Son.
 
 OpenBSM 1.1 alpha 1
 
@@ -337,4 +337,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#4 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#5 $
