--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,8 @@ OpenBSM 1.1 alpha 2
   OpenBSM build infrastructure with an unmodified OpenBSM distribution,
   allowing the customized system includes to be used with the OpenBSM build.
   Submitted by Stacey Son.
+- Various strcpy()'s/strcat()'s have been changed to strlcpy()'s/strlcat()'s
+  or asprintf().  Added compat/strlcpy.h for Linux.
 
 OpenBSM 1.1 alpha 1
 
@@ -337,4 +339,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#5 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#6 $
