--- a/man/getaudit.2
+++ b/man/getaudit.2
@@ -24,9 +24,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/getaudit.2#9 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/getaudit.2#10 $
 .\"
-.Dd April 19, 2005
+.Dd October 19, 2008
 .Dt GETAUDIT 2
 .Os
 .Sh NAME
@@ -58,9 +58,7 @@ and
 The
 .Fa auditinfo_t
 data structure is defined as follows:
-.nf
-.in +4n
-
+.Bd -literal -offset indent
 struct auditinfo {
 	au_id_t        ai_auid;         /* Audit user ID */
 	au_mask_t      ai_mask;         /* Audit masks */
@@ -68,47 +66,39 @@ struct auditinfo {
 	au_asid_t      ai_asid;         /* Audit session ID */
 };
 typedef struct auditinfo        auditinfo_t;
-.in
-.fi
+.Ed
 .Pp
 The
 .Fa ai_auid
 variable contains the audit identifier which is recorded in the audit log for
 each event the process caused.
-.PP
-
+.Pp
 The
 .Fa au_mask_t
 data structure defines the bit mask for auditing successful and failed events
-out of the predefined list of event classes. It is defined as follows:
-.nf
-.in +4n
-
+out of the predefined list of event classes.
+It is defined as follows:
+.Bd -literal -offset indent
 struct au_mask {
 	unsigned int    am_success;     /* success bits */
 	unsigned int    am_failure;     /* failure bits */
 };
 typedef struct au_mask  au_mask_t;
-.in
-.fi
-.PP
-
+.Ed
+.Pp
 The
 .Fa au_termid_t
 data structure defines the Terminal ID recorded with every event caused by the
-process. It is defined as follows:
-.nf
-.in +4n
-
+process.
+It is defined as follows:
+.Bd -literal -offset indent
 struct au_tid {
 	dev_t           port;
 	u_int32_t       machine;
 };
 typedef struct au_tid   au_tid_t;
-.in
-.fi
-.PP
-
+.Ed
+.Pp
 The
 .Fa ai_asid
 variable contains the audit session ID which is recorded with every event
@@ -119,11 +109,10 @@ The
 system call
 uses the expanded
 .Fa auditinfo_addr_t
-data structure supports Terminal IDs with larger addresses such as those used
-in IP version 6.  It is defined as follows:
-.nf
-.in +4n
-
+data structure and supports Terminal IDs with larger addresses
+such as those used in IP version 6.
+It is defined as follows:
+.Bd -literal -offset indent
 struct auditinfo_addr {
 	au_id_t         ai_auid;        /* Audit user ID. */
 	au_mask_t       ai_mask;        /* Audit masks. */
@@ -131,25 +120,20 @@ struct auditinfo_addr {
 	au_asid_t       ai_asid;        /* Audit session ID. */
 };
 typedef struct auditinfo_addr   auditinfo_addr_t;
-.in
-.fi
+.Ed
 .Pp
-
 The
 .Fa au_tid_addr_t
 data structure which includes a larger address storage field and an additional
 field with the type of address stored:
-.nf
-.in +4n
-
+.Bd -literal -offset indent
 struct au_tid_addr {
 	dev_t           at_port;
 	u_int32_t       at_type;
 	u_int32_t       at_addr[4];
 };
 typedef struct au_tid_addr      au_tid_addr_t;
-.in
-.fi
+.Ed
 .Pp
 These system calls require an appropriate privilege to complete.
 .Sh RETURN VALUES
